--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-VITE_API_URL=https://red-backend-neww.up.railway.app
-VITE_API_URL=https://red-backend-neww.up.railway.app/api
+
+VITE_API_URL=https://red-backend-neww-production.up.railway.app/api
+
