--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
 
-# VITE_API_URL=https://red-backend-neww-production.up.railway.app/api
+VITE_API_URL=https://red-backend-neww-production.up.railway.app/api
 
 
-VITE_API_URL=https://red-backend-neww.up.railway.app/api
