--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
 
-# VITE_API_URL=https://red-backend-neww-production.up.railway.app/api
+VITE_API_URL=https://red-backend-neww-production.up.railway.app/api
 
 
-VITE_API_URL=https://red-backend-neww.up.railway.app/api;
 
